--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ legend{
         color: white;
     }
     .barra_titulo{
+        font-size: 12px;
         color: #b040ff;
         text-align: center;
     }
