--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--color-dark1);
     color: var(--color-white);
-    background-attachment: fixed;
 }
 .img_logo_header{
     width: 45px;
@@ -168,5 +167,14 @@ legend{
     #tbody{
         color: #572574;
         text-align: center;
+    }
+    body{
+        display: grid;
+        height: 100vh;
+        grid-template-rows: 10vh 15vh 10vh;
+    }
+    .grid{
+        display: grid;
+        place-items: center;
     }
 }
