--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ legend{
         text-align: center;
     }
     #tbody{
-        color: #572574;
+        color: rgb(146, 209, 230);
         text-align: center;
         font: 14px Arial;
     }
